--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "gh-pages": "^6.2.0",
+    "primereact": "^10.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
